--- a/PrismUserControlTest.Content/Views/SampleUserControl.xaml
+++ b/PrismUserControlTest.Content/Views/SampleUserControl.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="False">
     <Grid Margin="5" Background="Khaki">
-        <TextBlock Text="{Binding Message}" />
+        <TextBlock Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
 </UserControl>
